--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
